# Feather-Calendar

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  logs  release.ps1
specs/: Requirements.md  design.md  needs.md  tasks.md
src/: app.rs  lib.rs  main.rs
src/logic/: calendar_logic.rs  mod.rs
src/ui/: calendar_view.rs  header_view.rs  mod.rs
