[package]
name = "feather_calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
image = { version = "0.25.1", features = ["png"] }
serde_json = "1.0.117"

[profile.release]
lto = true
panic = 'abort'